Updated APIs for Clusters
